# AI-Digi-Ellie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: audio_utils.hpp  azure_stt.hpp  azure_tts.hpp  config.hpp  conversation.hpp  discord_bot.hpp  httplib.h  httplib_config.hpp  inference.hpp  logging.hpp  system_control.hpp  whisper_client.hpp  whisper_service.hpp  whisper_stt.hpp
include/discord_bot/: commands.hpp  core.hpp  message.hpp  tts.hpp  voice.hpp
src/: audio_utils.cpp  azure_stt.cpp  azure_tts.cpp  conversation.cpp  discord_bot.cpp  inference.cpp  main.cpp  system_control.cpp  whisper_client.cpp  whisper_service.cpp  whisper_service_main.cpp  whisper_stt.cpp
src/discord_bot/: commands.cpp  core.cpp  message.cpp  tts.cpp  voice.cpp
